--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,9 +7,9 @@
   font-family: "Lato", sans-serif;
 }
 
-.profile,
-.team,
-.company {
+.home,
+.goals,
+.questionnaire {
   display: flex;
   height: 90vh;
   align-items: center;
